--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY PORTFOLIO</title>
+    <link rel=" stylesheet" href ="portfolio.css">
 </head>
 <body>
+    <div class ="portfolio-container" >
+        <ul class="navlist">
+            <li> <a href ="#">Home</a></li>
+            <li> <a href ="#">Work</a></li>
+            <li> <a href ="#">Project</a></li>
+            <li> <a href ="#">About</a></li>
+            <li> <a href ="#">Skills</a></li>
+
+
+            
+        </ul>
+
+
+
+    </div>
     
 </body>
 </html>
