--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
             <li> <a href ="#">Project</a></li>
             <li> <a href ="#">About</a></li>
             <li> <a href ="#">Skills</a></li>
-
-
             
-        </ul>
+ </ul>
+           <div class="left-container">
+
+           </div>
+            <div class="right-container"> 
+
+            </div>
 
 
 
