--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
     <div class="content">
         <h2> Hi! I am Aditya Singh</h2>
         <h1>Web Developer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repudiandae et vero amet deserunt nam iste corporis a id aliquam.</p>
-    <div class="button">
+        <p id="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repudiandae et vero amet deserunt nam iste corporis a id aliquam.</p>
+    <div class="btn-container">
         <button> Hire me</button>
         <button>View project</button>
     </div>
     </div>
     </div>
     <div class ="right-container"></div>
+    <div class="design">
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
 </div>
 
 </body>
