--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
         <h2> Hi! I am Aditya Singh</h2>
         <h1>Web Developer</h1>
-        <p id="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis repudiandae et vero amet deserunt nam iste corporis a id aliquam.</p>
+        <p id="detail">I have good knowldge in HTML and CSS and  basic knowldeg of JS.</p>
     <div class="btn-container">
         <button> Hire me</button>
         <button>View project</button>
